# asc-tools

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  OAT.xml  PRE_COMMIT_WORKFLOW.md  README.md  README_en.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_dep_tar.py  install_deps.sh  version.cmake  version.info
cpudebug/: CMakeLists.txt
cpudebug/cmake/: fun.cmake  tikicpulib-config.cmake.in
cpudebug/include/: cpu_debug_launch.h  intri_fmt.h  intri_fun.h  kern_fwk.h  kernel_bf16.h  kernel_elf_parser.h  kernel_fp16.h  kernel_fp32.h  kernel_fp4_e1m2.h  kernel_fp4_e2m1.h  kernel_fp8_e4m3.h  kernel_fp8_e5m2.h  kernel_fp8_e8m0.h  kernel_hif8.h  kernel_print_lock.h  kernel_raise_signal.h  kernel_simt_cpu.h  kernel_vectorized.h  simt_stub.h  stub_def.h  stub_reg.h  tikicpulib.h
cpudebug/src/acl_stub/: CMakeLists.txt  ascendc_acl_stub.cpp  kernel_fp16.cpp
cpudebug/src/api_check/: kernel_base_check.cpp  kernel_check_params.h  kernel_check_util.cpp  kernel_copy_check.cpp  kernel_cpu_check.h  kernel_cube_initconstvalue_check.cpp  kernel_data_copy_check.cpp  kernel_data_copy_pad_check.cpp  kernel_data_copy_slice_check.cpp  kernel_loaddata_check.cpp  kernel_mmad_check.cpp  kernel_vec_bilinearinterpolation_check.cpp  kernel_vec_binary_check.cpp  kernel_vec_binary_scalar_check.cpp  kernel_vec_broadcast_check.cpp  kernel_vec_broadcast_to_mm_check.cpp  kernel_vec_compare_register_check.cpp  kernel_vec_compare_scalar_check.cpp  kernel_vec_createvecindex_check.cpp  kernel_vec_dup_check.cpp  kernel_vec_gather_check.cpp  kernel_vec_gather_mask_check.cpp  kernel_vec_gatherb_check.cpp  kernel_vec_proposal_check.cpp  kernel_vec_reduce_check.cpp  kernel_vec_reduce_other_check.cpp  kernel_vec_reduce_other_whl_check.cpp  kernel_vec_scatter_check.cpp  kernel_vec_select_check.cpp  kernel_vec_sort_check.cpp  kernel_vec_transpose_check.cpp  kernel_vector_padding_check.cpp
cpudebug/src/api_check/inc/: ascend310B1_ini.h  ascend610Lite_ini.h  ascend610_ini.h  ascend910B1_ini.h  ascend910_9599_ini.h  ascend910_ini.h  ascend950pr_9599_ini.h  kernel_base_check.h  kernel_copy_check.h  kernel_cube_initconstvalue_check.h  kernel_data_copy_check.h  kernel_data_copy_pad_check.h  kernel_data_copy_slice_check.h  kernel_loaddata_check.h  kernel_mmad_check.h  kernel_vec_bilinearinterpolation_check.h  kernel_vec_binary_check.h  kernel_vec_binary_scalar_check.h  kernel_vec_broadcast_check.h  kernel_vec_broadcast_to_mm_check.h  kernel_vec_compare_register_check.h  kernel_vec_compare_scalar_check.h  kernel_vec_createvecindex_check.h  kernel_vec_dup_check.h  kernel_vec_gather_check.h  kernel_vec_gather_mask_check.h  kernel_vec_gatherb_check.h  kernel_vec_proposal_check.h  kernel_vec_reduce_check.h  kernel_vec_reduce_other_check.h  kernel_vec_reduce_other_whl_check.h  kernel_vec_scatter_check.h  kernel_vec_select_check.h  kernel_vec_sort_check.h  kernel_vec_transpose_check.h  kernel_vector_padding_check.h  mc62cm12aa_ini.h
cpudebug/src/regfwk/: CMakeLists.txt  kernel_print_lock.cpp  stub_backtrace.cpp  stub_base.cpp  stub_reg.cpp
cpudebug/utils/: kernel_check_util.h  kernel_common.h  kernel_event.h  kernel_log.h  kernel_macros.h  kernel_process_lock.h  kernel_struct_mm.h  kernel_struct_proposal.h  kernel_tensor.h  kernel_utils.h
cpudebug/utils/include/utils/: kernel_check_cube_util.h  kernel_check_data_copy_util.h  kernel_check_vec_binary_util.h  kernel_check_vec_data_filling_util.h  kernel_check_vec_padding_util.h  kernel_check_vec_reduce_util.h  kernel_check_vec_select_util.h  kernel_check_vec_util.h  kernel_utils_ceil_oom_que.h  kernel_utils_constants.h  kernel_utils_mode_cpu.h  kernel_utils_struct_norm_sort.h
test/: CMakeLists.txt
test/cmake/: config.cmake  func.cmake  intf.cmake
test/cmake/tools/: generate_cpp_cov.sh  prepare.sh
test/py_ut/testcase/show_kernel_debug_data/: test_show_kernel_debug_data.py
test/ut/: CMakeLists.txt  main_global.cpp
test/ut/common/: alog_stub.cpp  common.cpp  common.h  dlog_stub.cpp  k3_pvwrap.cpp  platform_stub.cpp  tik_pv_wrapper.cpp  tik_pv_wrapper.h
test/ut/common/ci/: set_python_env.sh
test/ut/testcase/: test_utils.h
test/ut/testcase/acl_stub/: test_acl_stub.cpp
test/ut/testcase/opbuild/: aclnn_add_tik2.cpp.txt  aclnn_add_tik2.h.txt  aclnn_auto_contiguous_test.cpp.txt  aclnn_dynamic_ref_test.cpp.txt  aclnn_input_test.cpp.txt  aclnn_mc2_test.cpp.txt  aclnn_out_shape_dep_on_compute.cpp.txt  aclnn_output_test.cpp.txt  aclnn_ref_contiguous_test.cpp.txt  aclnn_ref_test.cpp.txt  aclnn_scalar_test.cpp.txt  aclnn_value_depend_scope_test.cpp.txt  aclnn_value_depend_test.cpp.txt  aclnn_version_test.cpp.txt  aclnn_version_test_v1.h.txt  aclnn_version_test_v2.cpp.txt  aic-ascend310p-ops-info.ini.txt  aic-ascend910-ops-info.ini.txt  custom_op_registry.cpp.txt  op_proto.cc.txt  (+5 more)
utils/msobjdump/: CMakeLists.txt  msobjdump.sh  setup.py
utils/msobjdump/msobjdump/: __init__.py  __main__.py  msobjdump_main.py  utils.py
utils/msopgen/: CMakeLists.txt  build.py
utils/msopst/: CMakeLists.txt  build.py  setup.py
utils/opbuild/: CMakeLists.txt  op_aclnn_fallback_generator.cpp  op_aclnn_fallback_generator.h  op_aclnn_generator.cpp  op_aclnn_generator.h  op_build.cpp  op_build_error_codes.h  op_build_params.cpp  op_build_params.h  op_cfg_generator.cpp  op_cfg_generator.h  op_cpu_cfg_generator.cpp  op_cpu_cfg_generator.h  op_custom_registry_generator.cpp  op_custom_registry_generator.h  op_generator.cpp  op_generator.h  op_generator_factory.cpp  op_generator_factory.h  op_proto_generator.cpp  op_proto_generator.h
utils/opbuild/common/: ascendc_tool_log.h
utils/optype_collector/: CMakeLists.txt  optype_collector.sh  setup.py
utils/optype_collector/optype_collector/: __init__.py  __main__.py  optype_collector_main.py
utils/show_kernel_debug_data/: CMakeLists.txt  setup.py  show_kernel_debug_data.sh
utils/show_kernel_debug_data/show_kernel_debug_data/: __init__.py  __main__.py  data_converter.py  dump_logger.py  dump_parser.py
utils/templates/: CMakeLists.txt
(+322 files in other folders)
